--- a/src/MVCAngularRouting/Views/Shared/_AngularLayout.cshtml
+++ b/src/MVCAngularRouting/Views/Shared/_AngularLayout.cshtml
@@ -31,6 +31,7 @@
             <li><a href="angular/pius-home">PIUS Home</a></li>
             <li><a href="angular/index">Angular Index</a></li>
             <li><a href="angular/another-page">Another Page</a></li>
+            <li><a href="angular/component-radio">Component Radio</a></li>
             <li><a href="angular/abcd">Invalid Link</a></li>
         </ul>
     </div>
